# Chat

./: .gitignore  README.md
ChatServer/: main.cpp  run.sh
ChatServer/ChatServer/: CMakeLists.txt  main.cpp  run.sh
ChatServer/ChatServer/Inc/: CSession.h  ChatServiceImpl.h  ConfigMgr.h  LogicSystem.h  MsgNode.h  VarifyClient.h  const.h
ChatServer/ChatServer/Inc/data/: UserInfo.h
ChatServer/ChatServer/Src/: CServer.cpp  ConfigMgr.cpp  LogicSystem.cpp  MysqlMgr.cpp
ChatServer/Inc/: AsioIOContextPool.h  ChatGrpcClient.h  ChatServiceImpl.h  LogicSystem.h  MySqlDao.h  MySqlPool.h  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  UserInfo.h  const.h  data.h
ChatServer/Inc/data/: ApplyInfo.h
ChatServer/Src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  MySqlDao.cpp  MySqlPool.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp
ChatServer2/: CMakeLists.txt  main.cpp  run.sh
ChatServer2/Inc/: CServer.h  ChatGrpcClient.h  ChatServiceImpl.h  ConfigMgr.h  Defer  MySqlDao.h  MysqlMgr.h  RedisMgr.h  UserMgr.h  data.h
ChatServer2/Inc/data/: ApplyInfo.h  UserInfo.h
ChatServer2/Src/: AsioIOContextPool.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  LogicSystem.cpp  MySqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  UserMgr.cpp
Client/: CMakeLists.txt  main.cpp  res.qrc
Client/Form/: adduseritem.ui  applyfriend.ui  applyfrienditem.ui  applyfriendpage.ui  authenfriend.ui  chatdialog.ui  chatpage.ui  chatuserwid.ui  conuseritem.ui  findfaildialog.ui  findsuccessdialog.ui  friendlabel.ui  grouptipitem.ui  loadingdlg.ui  logindialog.ui  mainwindow.ui  qrcodedialog.ui  registerdialog.ui  resetdialog.ui
Client/Inc/: ApplyFriendList.h  BubbleFrame.h  ChatItemBase.h  ChatUserList.h  ChatView.h  ClickedBtn.h  ClickedLabel.h  ClickedOnceLabel.h  ContactUserList.h  CustomizeEdit.h  HttpMgr.h  ListItemBase.h  MessageTextEdit.h  MsgInfo.h  PictureBubble.h  SearchInfo.h  SearchList.h  ServerInfo.h  StateWidget.h  TcpMgr.h  TextBubble.h  TimerBtn.h  UserMgr.h  adduseritem.h  applyfriend.h  applyfrienditem.h  applyfriendpage.h  authenfriend.h  chatdialog.h  chatpage.h  chatuserwid.h  conuseritem.h  findfaildialog.h  findsuccessdialog.h  friendlabel.h  global.h  grouptipitem.h  loadingdlg.h  logindialog.h  mainwindow.h  (+5 more)
Client/Src/: ApplyFriendList.cpp  BubbleFrame.cpp  ChatItemBase.cpp  ChatUserList.cpp  ChatView.cpp  ClickedBtn.cpp  ClickedLabel.cpp  ClickedOnceLabel.cpp  ContactUserList.cpp  CustomizeEdit.cpp  HttpMgr.cpp  ListItemBase.cpp  MessageTextEdit.cpp  PictureBubble.cpp  SearchInfo.cpp  SearchList.cpp  StateWidget.cpp  TcpMgr.cpp  TextBubble.cpp  TimerBtn.cpp  UserMgr.cpp  adduseritem.cpp  applyfriend.cpp  applyfrienditem.cpp  applyfriendpage.cpp  authenfriend.cpp  chatdialog.cpp  chatpage.cpp  chatuserwid.cpp  conuseritem.cpp  findfaildialog.cpp  findsuccessdialog.cpp  friendlabel.cpp  global.cpp  grouptipitem.cpp  loadingdlg.cpp  logindialog.cpp  mainwindow.cpp  qrcodedialog.cpp  registerdialog.cpp  (+1 more)
Client/dataStruct/: AddFriendApply.h  ApplyInfo.h  AuthInfo  AuthRsp.h  FriendInfo  FriendInfo.h  TextChatData.h  TextChatMsg  TextChatMsg.h  UserInfo  UserInfo.h
Client/script/: addRes.py
Client/style/: LA.qss
GateServer/: CMakeLists.txt  main.cpp  run.sh
GateServer/Inc/: CServer.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MySqlDao.h  MySqlPool.h  MysqlMgr.h  RPConPool.h  Singleton.h  StatusGrpcClient.h  VarifyClient.h  const.h
GateServer/Src/: AsioIOContextPool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MySqlDao.cpp  MysqlMgr.cpp  RPConPool.cpp  VarifyClient.cpp
GateServer/proto/: yeild.sh
GateServer/script/: config_reader.py  read_cfg.sh
StatusServer/: CMakeLists.txt  main.cpp  run.sh
StatusServer/Inc/: AsioIOContextPool.h  CServer.h  ChatGrpcClient.h  HttpConnection.h  MySqlDao.h  MySqlPool.h  MysqlMgr.h  RedisPool.h  StatusServiceImpl.h  const.h  data.h
StatusServer/Src/: ChatGrpcClient.cpp  ConfigMgr.cpp  LogicSystem.cpp  RedisMgr.cpp  RedisPool.cpp  StatusGrpcClient.cpp  StatusServiceImpl.cpp  VarifyClient.cpp
StatusServer/proto/: message.proto
VarifyServer/: README.md  config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
doc/: Asio线程池.md  CServer.md  HttpConnection.md  mysql_connection.md
